dnl Process this file with autoconf to produce a configure script.

AC_INIT(Client.h)
AC_CONFIG_AUX_DIR(../../etc) 
AC_CONFIG_HEADER(ClientConfig.h)

AC_PREFIX_DEFAULT("/usr/local")

AC_MSG_CHECKING(for the compiler flags)
case "${host_cpu}:${host_vendor}:${host_os}" in
     powerpc:apple:netbsd*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
     alphaev56:dec:osf5.*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
    *:*:*)
       CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}
       break;;
esac
AC_MSG_RESULT(Setting CXXFLAGS to $CXXFLAGS)
AC_SUBST(CXXFLAGS)

AC_MSG_CHECKING(for the C++ compiler)
CXX=${CXX-g++}
AC_MSG_RESULT(setting CXX to $CXX)
AC_SUBST(CXX)

depend=${DODS_ROOT}/etc/depend.sh
AC_MSG_RESULT(setting depend to $depend)
AC_SUBST(depend)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
dnl AC_CHECK_LIB(dl,dlopen)
dnl AC_CHECK_LIB(z,zlibVersion)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(termcap, main)
AC_CHECK_LIB(pthread, pthread_create)
dnl AC_CHECK_LIB(curl, curl_version,,,-lz)

# check for mysql libraries
AC_DEFUN(OPENDAP_READLINE_CHECK, [dnl
    AC_ARG_WITH(readline,
        [  --with-readline=ARG    Where is the readline library (directory)],
        READLINE_PATH=${withval}, READLINE_PATH="not_used")
    AC_MSG_CHECKING([for readline])
    if test -d "$READLINE_PATH"
    then
	    AC_MSG_RESULT(using readline in $READLINE_PATH)
            LDFLAGS="$LDFLAGS -L${READLINE_PATH}/lib"
            AC_SUBST(LDFLAGS)
            LIBS="$LIBS -lreadline -lhistory"
            AC_SUBST(LIBS)
            INCS="$INCS -I${READLINE_PATH}/include/readline"
            AC_SUBST(INCS)
    else
	    AC_MSG_RESULT(using default readline)
            LIBS="$LIBS -lreadline -lhistory"
            AC_SUBST(LIBS)
	    INCS="$INCS -I/usr/include/readline"
            AC_SUBST(INCS)
    fi])

OPENDAP_READLINE_CHECK

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h termio.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_STRCOLL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getwd putenv select socket strerror)

AC_OUTPUT(Makefile)

