dnl Process this file with autoconf to produce a configure script.

AC_INIT(CmdApp.h)
AC_CONFIG_AUX_DIR(../conf) 
AC_CONFIG_HEADER(ClientConfig.h)

AC_PREFIX_DEFAULT("${OPENDAP_ROOT}")

AC_MSG_CHECKING(for the compiler flags)
case "${host_cpu}:${host_vendor}:${host_os}" in
     powerpc:apple:netbsd*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
     alphaev56:dec:osf5.*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
    *:*:*)
       CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}
       break;;
esac
AC_MSG_RESULT(Setting CXXFLAGS to $CXXFLAGS)
AC_SUBST(CXXFLAGS)

AC_MSG_CHECKING(for the C++ compiler)
CXX=${CXX-g++}
AC_MSG_RESULT(setting CXX to $CXX)
AC_SUBST(CXX)

depend=${OPENDAP_ROOT}/etc/depend.sh
AC_MSG_RESULT(setting depend to $depend)
AC_SUBST(depend)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

OPENDAP_CHECK_LIB_READLINE


dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h termio.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile)

