dnl -*- m4 -*-
dnl Process this file with autoconf to produce a configure script.

AC_INIT(OPeNDAPCommand.h)
AC_CONFIG_AUX_DIR(../conf) 
AC_CONFIG_HEADER(CommandConfig.h)

AC_PREFIX_DEFAULT("${OPENDAP_ROOT}")

AC_MSG_CHECKING(for the compiler flags)
case "${host_cpu}:${host_vendor}:${host_os}" in
     powerpc:apple:netbsd*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
     alphaev56:dec:osf5.*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
    *:*:*)
       CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}
       break;;
esac
AC_MSG_RESULT(Setting CXXFLAGS to $CXXFLAGS)
AC_SUBST(CXXFLAGS)

AC_MSG_CHECKING(for the C++ compiler)
CXX=${CXX-g++}
AC_MSG_RESULT(setting CXX to $CXX)
AC_SUBST(CXX)

depend=${OPENDAP_ROOT}/etc/depend.sh
AC_MSG_RESULT(setting depend to $depend)
AC_SUBST(depend)

AC_LANG_CPLUSPLUS

AC_LANG_C

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_OUTPUT(Makefile)
